--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -148,6 +148,7 @@
     <Content Include="Views\Home\Ingresar.cshtml" />
     <Content Include="Views\Home\Registrarse.cshtml" />
     <Content Include="Views\Home\pv_Info.cshtml" />
+    <Content Include="Views\Shared\pv_ProgressBar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
