--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -134,6 +134,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Necesidad.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -149,6 +150,8 @@
     <Content Include="Views\Home\Registrarse.cshtml" />
     <Content Include="Views\Home\pv_Info.cshtml" />
     <Content Include="Views\Shared\pv_ProgressBar.cshtml" />
+    <Content Include="Views\Home\pv_PublicacionMasValorada.cshtml" />
+    <Content Include="Views\Home\pv_Publicacion.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -158,7 +161,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
