--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Data\BaseDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Necesidad.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
