--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -134,7 +134,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\Necesidad.cs" />
+    <Compile Include="Models\Necesidad.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
