--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -44,9 +44,15 @@
   <ItemGroup>
     <Compile Include="Data\BaseDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\Ingresar.cs" />
-    <Compile Include="ViewModels\Necesidad.cs" />
-    <Compile Include="ViewModels\Registrar.cs" />
+    <Compile Include="ViewModels\NecesidadCreacion.cs" />
+    <Compile Include="ViewModels\Referencia.cs" />
+    <Compile Include="ViewModels\UsuarioIngresar.cs" />
+    <Compile Include="ViewModels\NecesidadInicio.cs" />
+    <Compile Include="ViewModels\UsuarioRegistrar.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ORM\" />
+    <Folder Include="Repository\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
