--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -104,10 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\lib\materialize\materialize.css" />
-    <Content Include="Content\src\progress_bar.css" />
+    <Content Include="Content\src\card.css" />
+    <Content Include="Content\src\progressbar.css" />
     <Content Include="Scripts\lib\bootstrap-vue\bootstrap-vue.common.js" />
-    <Content Include="Content\lib\bootstrap-vue\bootstrap-vue.css" />
-    <Content Include="Content\lib\bootstrap\bootstrap.css" />
     <Content Include="Content\site.css" />
     <Content Include="Global.asax" />
     <Content Include="Images\favicon.png" />
@@ -150,7 +149,6 @@
     <Content Include="Views\Home\pv_Info.cshtml" />
     <Content Include="Views\Shared\pv_ProgressBar.cshtml" />
     <Content Include="Views\Home\pv_PublicacionMasValorada.cshtml" />
-    <Content Include="Views\Home\pv_Publicacion.cshtml" />
     <Content Include="Views\Home\pv_CardMasValorada.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
