--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\lib\materialize\materialize.css" />
+    <Content Include="Content\src\perfil.css" />
     <Content Include="Content\src\progress_bar.css" />
     <Content Include="Scripts\lib\bootstrap-vue\bootstrap-vue.common.js" />
     <Content Include="Content\lib\bootstrap-vue\bootstrap-vue.css" />
@@ -129,6 +130,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -152,6 +154,7 @@
     <Content Include="Views\Home\pv_PublicacionMasValorada.cshtml" />
     <Content Include="Views\Home\pv_Publicacion.cshtml" />
     <Content Include="Views\Home\pv_CardMasValorada.cshtml" />
+    <Content Include="Views\Perfil\Datos.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
