Nav: accion Iniciar Sesion y Registrarse

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -107,20 +107,15 @@
     <Content Include="Content\src\card.css" />
     <Content Include="Content\src\info.css" />
     <Content Include="Content\src\progressbar.css" />
-    <Content Include="Scripts\lib\bootstrap-vue\bootstrap-vue.common.js" />
     <Content Include="Content\site.css" />
     <Content Include="Global.asax" />
     <Content Include="Images\favicon.png" />
     <Content Include="Images\Inicio\Info.png" />
-    <Content Include="Scripts\lib\bootstrap-vue\bootstrap-vue.js" />
-    <Content Include="Scripts\lib\bootstrap\bootstrap.js" />
     <Content Include="Scripts\lib\jquery\jquery.js" />
     <Content Include="Scripts\lib\materialize\materialize.js" />
     <Content Include="Scripts\lib\popper\popper.js" />
     <Content Include="Scripts\lib\popper\popper.min.js" />
-    <Content Include="Scripts\lib\portal-vue\portal-vue.umd.js" />
     <Content Include="Scripts\lib\toast\toast.js" />
-    <Content Include="Scripts\lib\vue\vue.js" />
     <Content Include="Scripts\src\datepicker.js" />
     <Content Include="Scripts\src\progressbar.js" />
     <Content Include="Web.config" />
@@ -145,8 +140,8 @@
     <Content Include="Views\Shared\pv_NavbarAnonimo.cshtml" />
     <Content Include="Views\Shared\pv_NavbarUsuario.cshtml" />
     <Content Include="Views\Home\Inicio.cshtml" />
-    <Content Include="Views\Home\Ingresar.cshtml" />
-    <Content Include="Views\Home\Registrarse.cshtml" />
+    <Content Include="Views\Home\pv_Ingresar.cshtml" />
+    <Content Include="Views\Home\pv_Registrarse.cshtml" />
     <Content Include="Views\Home\pv_Info.cshtml" />
     <Content Include="Views\Shared\pv_ProgressBar.cshtml" />
     <Content Include="Views\Home\pv_PublicacionMasValorada.cshtml" />
