--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -104,21 +104,25 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\lib\materialize\materialize.css" />
-    <Content Include="Content\src\card.css" />
-    <Content Include="Content\src\info.css" />
-    <Content Include="Content\src\ingresar.css" />
-    <Content Include="Content\src\progressbar.css" />
+    <Content Include="Content\src\perfil.css" />
+    <Content Include="Content\src\progress_bar.css" />
+    <Content Include="Scripts\lib\bootstrap-vue\bootstrap-vue.common.js" />
+    <Content Include="Content\lib\bootstrap-vue\bootstrap-vue.css" />
+    <Content Include="Content\lib\bootstrap\bootstrap.css" />
     <Content Include="Content\site.css" />
     <Content Include="Global.asax" />
     <Content Include="Images\favicon.png" />
     <Content Include="Images\Inicio\Info.png" />
+    <Content Include="Scripts\lib\bootstrap-vue\bootstrap-vue.js" />
+    <Content Include="Scripts\lib\bootstrap\bootstrap.js" />
     <Content Include="Scripts\lib\jquery\jquery.js" />
     <Content Include="Scripts\lib\materialize\materialize.js" />
     <Content Include="Scripts\lib\popper\popper.js" />
     <Content Include="Scripts\lib\popper\popper.min.js" />
+    <Content Include="Scripts\lib\portal-vue\portal-vue.umd.js" />
     <Content Include="Scripts\lib\toast\toast.js" />
-    <Content Include="Scripts\src\ajax_action.js" />
-    <Content Include="Scripts\src\inicio\load_action.js" />
+    <Content Include="Scripts\lib\vue\vue.js" />
+    <Content Include="Scripts\src\CrearNecesidad.js" />
     <Content Include="Scripts\src\datepicker.js" />
     <Content Include="Scripts\src\progressbar.js" />
     <Content Include="Web.config" />
@@ -127,6 +131,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PerfilController.cs" />
+    <Compile Include="Controllers\NecesidadController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -143,12 +149,16 @@
     <Content Include="Views\Shared\pv_NavbarAnonimo.cshtml" />
     <Content Include="Views\Shared\pv_NavbarUsuario.cshtml" />
     <Content Include="Views\Home\Inicio.cshtml" />
-    <Content Include="Views\Home\pv_Ingresar.cshtml" />
-    <Content Include="Views\Home\pv_Registrarse.cshtml" />
+    <Content Include="Views\Home\Ingresar.cshtml" />
+    <Content Include="Views\Home\Registrarse.cshtml" />
     <Content Include="Views\Home\pv_Info.cshtml" />
     <Content Include="Views\Shared\pv_ProgressBar.cshtml" />
     <Content Include="Views\Home\pv_PublicacionMasValorada.cshtml" />
+    <Content Include="Views\Home\pv_Publicacion.cshtml" />
     <Content Include="Views\Home\pv_CardMasValorada.cshtml" />
+    <Content Include="Views\Perfil\Datos.cshtml" />
+    <Content Include="Views\Perfil\MisDonaciones.cshtml" />
+    <Content Include="Views\Necesidad\CrearNecesidad.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
