--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -45,5 +45,11 @@
     <Compile Include="Home\Ingresar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj">
+      <Project>{DD8EED8E-5E14-4A1D-B1D0-B94A059FE509}</Project>
+      <Name>Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
