Creacion de Layout Inicio

--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Home\Ingresar.cs" />
+    <Compile Include="Home\IngresarService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
