--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -155,19 +155,18 @@
     <Content Include="Views\Shared\pv_NavbarAnonimo.cshtml" />
     <Content Include="Views\Shared\pv_NavbarUsuario.cshtml" />
     <Content Include="Views\Home\Inicio.cshtml" />
-    <Content Include="Views\Home\Ingresar.cshtml" />
-    <Content Include="Views\Home\Registrarse.cshtml" />
     <Content Include="Views\Home\pv_Info.cshtml" />
     <Content Include="Views\Shared\pv_ProgressBar.cshtml" />
-    <Content Include="Views\Home\pv_PublicacionMasValorada.cshtml" />
+    <Content Include="Views\Home\PublicacionMasValorada.cshtml" />
     <Content Include="Views\Home\pv_Publicacion.cshtml" />
     <Content Include="Views\Home\pv_CardMasValorada.cshtml" />
     <Content Include="Views\Perfil\Datos.cshtml" />
     <Content Include="Views\Perfil\MisDonaciones.cshtml" />
     <Content Include="Views\Necesidad\CrearNecesidad.cshtml" />
-    <Content Include="Views\Home\pv_Registrarse.cshtml" />
-    <Content Include="Views\Home\pv_Ingresar.cshtml" />
+    <Content Include="Views\Home\Registrarse.cshtml" />
+    <Content Include="Views\Home\Ingresar.cshtml" />
     <Content Include="Views\Home\Bienvenido.cshtml" />
+    <Content Include="Views\Home\_InicioLayout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
