#Titulo: Carga de archivos de documentacion
#Descripcion:
- Esquema de base de datos
- Query de insertar usuario y tipo de usuario
- Contraseña de hMail y copia de backup
- Creacion de UsuarioService
- Creacion de EmailService

--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,7 +50,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Home\EmailService.cs" />
     <Compile Include="Home\IngresarService.cs" />
+    <Compile Include="Home\RegistrarseService.cs" />
+    <Compile Include="Home\UsuarioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,7 +64,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+    <None Include="Docs\Email\HMBackup 2020-05-30 212740.7z" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Docs\Email\hMail.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
