--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -73,5 +73,11 @@
   <ItemGroup>
     <Folder Include="ORM\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Docs\BD.png" />
+    <Content Include="Docs\SQL\DDL\db-esquema.sql" />
+    <Content Include="Docs\SQL\MDL\UsuarioInsert.sql" />
+    <Content Include="Docs\SQL\MDL\UsuariosTipoInsert.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
