#Titulo: Registrarse funcionando
#Descripcion

- Fix connection string
- Eliminacion de RegistrarseService
- Modificacion de Datepicker
- Se agrego en el form de registrarse la action post y su ruta

--- a/WebApp/Views/web.config
+++ b/WebApp/Views/web.config
@@ -8,7 +8,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Pandemia" connectionString="metadata=res://*/ORM.Model.csdl|res://*/ORM.Model.ssdl|res://*/ORM.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TP-20201C;user id=admin;password=Admin2020;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PandemiaEntities" connectionString="metadata=res://*/ORM.Model.csdl|res://*/ORM.Model.ssdl|res://*/ORM.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TP-20201C;user id=admin;password=Admin2020;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
