--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -105,8 +105,8 @@
     <Compile Include="Partial\UsuariosPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IGenericoRepository.cs" />
-    <Compile Include="Repository\IUsuario.cs" />
-    <Compile Include="Repository\UsuarioRepository.cs" />
+    <Compile Include="Repository\IngresarRepository.cs" />
+    <Compile Include="Repository\RegistrarseRepository.cs" />
     <Compile Include="ViewModels\NecesidadCreacion.cs" />
     <Compile Include="ViewModels\Referencia.cs" />
     <Compile Include="ViewModels\UsuarioIngresar.cs" />
@@ -127,9 +127,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MetaData\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Docs\BD.png" />
     <Content Include="Docs\SQL\DDL\db-esquema.sql" />
