--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -104,8 +104,10 @@
     </Compile>
     <Compile Include="Partial\UsuariosPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\IGenericoRepository.cs" />
     <Compile Include="Repository\IngresarRepository.cs" />
+    <Compile Include="Repository\NecesidadRepository.cs" />
     <Compile Include="Repository\RegistrarseRepository.cs" />
     <Compile Include="Repository\PerfilRepository.cs" />
     <Compile Include="ViewModels\NecesidadCreacion.cs" />
@@ -145,18 +147,6 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Model1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Model1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
