--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -102,17 +103,15 @@
     <Compile Include="ORM\UsuariosTipo.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Partial\IngresarMetaData.cs" />
+    <Compile Include="Partial\PerfilMetaData.cs" />
+    <Compile Include="Partial\RegistrarseMetaData.cs" />
     <Compile Include="Partial\UsuariosPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IGenericoRepository.cs" />
     <Compile Include="Repository\IngresarRepository.cs" />
     <Compile Include="Repository\RegistrarseRepository.cs" />
     <Compile Include="Repository\PerfilRepository.cs" />
-    <Compile Include="ViewModels\NecesidadCreacion.cs" />
-    <Compile Include="ViewModels\Referencia.cs" />
-    <Compile Include="ViewModels\UsuarioIngresar.cs" />
-    <Compile Include="ViewModels\NecesidadInicio.cs" />
-    <Compile Include="ViewModels\UsuarioRegistrar.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
