Mi perfil: inicio de servicio archivo

--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -50,10 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Usuario\ArchivoService.cs" />
     <Compile Include="Home\EmailService.cs" />
     <Compile Include="Home\IngresarService.cs" />
     <Compile Include="Home\UsuarioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario\UsuarioService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj">
