--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -108,10 +108,10 @@
     <Compile Include="Partial\RegistrarseMetaData.cs" />
     <Compile Include="Partial\UsuariosPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\IGenericoRepository.cs" />
-    <Compile Include="Repository\IngresarRepository.cs" />
-    <Compile Include="Repository\RegistrarseRepository.cs" />
     <Compile Include="Repository\PerfilRepository.cs" />
+    <Compile Include="Repository\UsuarioRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
