--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -130,9 +130,13 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Docs\BD.png" />
+    <Content Include="Docs\SQL\DDL\db-esquema-v3.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema.sql" />
     <Content Include="Docs\SQL\DDL\DonacionesTipo.sql" />
+    <Content Include="Docs\SQL\DDL\NecesidadesEstado.sql" />
     <Content Include="Docs\SQL\DDL\UsuariosTipo.sql" />
+    <Content Include="Docs\SQL\MDL\DonacionesTipoInsert.sql" />
+    <Content Include="Docs\SQL\MDL\NecesidadesEstadoInsert.sql" />
     <Content Include="Docs\SQL\MDL\UsuarioInsert.sql" />
     <Content Include="Docs\SQL\MDL\UsuariosTipoInsert.sql" />
     <Content Include="ORM\Model.Context.tt">
