--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -130,8 +130,13 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Docs\BD.png" />
+    <Content Include="Docs\SQL\DDL\db-esquema-v2.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v3.sql" />
-    <Content Include="Docs\SQL\DDL\db-esquema.sql" />
+    <Content Include="Docs\SQL\DDL\db-esquema-v4.sql" />
+    <Content Include="Docs\SQL\DDL\db-esquema-v1.sql" />
+    <Content Include="Docs\SQL\DDL\Denuncias.sql" />
+    <Content Include="Docs\SQL\DDL\DenunciasComentario.sql" />
+    <Content Include="Docs\SQL\DDL\DenunciasEstado.sql" />
     <Content Include="Docs\SQL\DDL\DonacionesTipo.sql" />
     <Content Include="Docs\SQL\DDL\NecesidadesEstado.sql" />
     <Content Include="Docs\SQL\DDL\UsuariosTipo.sql" />
