Actualizacion de BD y Iteracion de Denuncias
- Actualizacion de la relacion Denuncia - Necesidad
- Itera todos las denuncias con su modelo
- Creacion de MetaData Necesidad
- Creacion de Repository Denuncia

--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Home\NecesidadService.cs" />
     <Compile Include="Home\RegistrarseService.cs" />
     <Compile Include="Usuario\ArchivoService.cs" />
+    <Compile Include="Usuario\DenunciaService.cs" />
     <Compile Include="Usuario\PerfilService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
