--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -115,11 +115,13 @@
     <Compile Include="Partial\DenunciaMetaData.cs" />
     <Compile Include="Partial\IngresarMetaData.cs" />
     <Compile Include="Partial\MotivoDenunciaMetaData.cs" />
+    <Compile Include="Partial\NecesidadesMetaData.cs" />
     <Compile Include="Partial\PerfilMetaData.cs" />
     <Compile Include="Partial\RegistrarseMetaData.cs" />
     <Compile Include="Partial\UsuariosPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\DenunciaRepository.cs" />
     <Compile Include="Repository\IGenericoRepository.cs" />
     <Compile Include="Repository\NecesidadRepository.cs" />
     <Compile Include="Repository\UsuarioRepository.cs" />
