Creacion de Modal Detalle Necesidad

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -133,6 +133,7 @@
     <Content Include="Scripts\lib\toast\toast.js" />
     <Content Include="Scripts\src\CrearNecesidad.js" />
     <Content Include="Scripts\src\datepicker.js" />
+    <Content Include="Scripts\src\denuncia.js" />
     <Content Include="Scripts\src\progressbar.js" />
     <Content Include="Web.config" />
   </ItemGroup>
