--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -113,6 +113,8 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Partial\DenunciaMetaData.cs" />
+    <Compile Include="Partial\DenunciasComentarioMetaData.cs" />
+    <Compile Include="Partial\DenunciasEstadoMetaData.cs" />
     <Compile Include="Partial\IngresarMetaData.cs" />
     <Compile Include="Partial\MotivoDenunciaMetaData.cs" />
     <Compile Include="Partial\NecesidadesMetaData.cs" />
@@ -148,6 +150,7 @@
     <Content Include="Docs\SQL\DDL\db-esquema-v4.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v1.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v5.sql" />
+    <Content Include="Docs\SQL\DDL\db-esquema-v6.sql" />
     <Content Include="Docs\SQL\DDL\Denuncias.sql" />
     <Content Include="Docs\SQL\DDL\DenunciasComentario.sql" />
     <Content Include="Docs\SQL\DDL\DenunciasEstado.sql" />
