--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -112,17 +112,14 @@
     <Compile Include="ORM\UsuariosTipo.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Partial\DenunciaMetaData.cs" />
-    <Compile Include="Partial\DenunciasComentarioMetaData.cs" />
-    <Compile Include="Partial\DenunciasEstadoMetaData.cs" />
     <Compile Include="Partial\IngresarMetaData.cs" />
-    <Compile Include="Partial\MotivoDenunciaMetaData.cs" />
     <Compile Include="Partial\NecesidadesMetaData.cs" />
     <Compile Include="Partial\PerfilMetaData.cs" />
     <Compile Include="Partial\RegistrarseMetaData.cs" />
     <Compile Include="Partial\UsuariosPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\DenunciaEstadoRepository.cs" />
     <Compile Include="Repository\DenunciaRepository.cs" />
     <Compile Include="Repository\IGenericoRepository.cs" />
     <Compile Include="Repository\NecesidadRepository.cs" />
@@ -145,18 +142,23 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Docs\BD.png" />
+    <Content Include="Docs\SQL\DDL\Comentarios.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v2.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v3.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v4.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v1.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v5.sql" />
     <Content Include="Docs\SQL\DDL\db-esquema-v6.sql" />
-    <Content Include="Docs\SQL\DDL\Denuncias.sql" />
-    <Content Include="Docs\SQL\DDL\DenunciasComentario.sql" />
+    <Content Include="Docs\SQL\DDL\db-esquema-v7.sql" />
+    <Content Include="Docs\SQL\DDL\Denuncias-v2.sql" />
+    <Content Include="Docs\SQL\DDL\Denuncias-v1.sql" />
+    <Content Include="Docs\SQL\DDL\DenunciasComentario-v2.sql" />
+    <Content Include="Docs\SQL\DDL\DenunciasComentario-v1.sql" />
     <Content Include="Docs\SQL\DDL\DenunciasEstado.sql" />
     <Content Include="Docs\SQL\DDL\DonacionesTipo.sql" />
     <Content Include="Docs\SQL\DDL\NecesidadesEstado.sql" />
     <Content Include="Docs\SQL\DDL\UsuariosTipo.sql" />
+    <Content Include="Docs\SQL\MDL\DenunciaEstadoInsert.sql" />
     <Content Include="Docs\SQL\MDL\DonacionesTipoInsert.sql" />
     <Content Include="Docs\SQL\MDL\MotivoDenunciaInsert.sql" />
     <Content Include="Docs\SQL\MDL\NecesidadesEstadoInsert.sql" />
